# opcuaPlayground

./: .gitignore  README.md
10_rust_opcua_server_test/: Cargo.toml
11_fully_rust_ciet_isothermal_digital_twin/: Cargo.toml
11_fully_rust_ciet_isothermal_digital_twin/src/: main.rs  tests_and_examples.rs
11_fully_rust_ciet_isothermal_digital_twin/src/ciet_libraries/: branch.rs  component_library.rs  isothermal_ciet_facility.rs  isothermial_ciet_facility.rs  mod.rs  therminol_component.rs  therminol_pipe.rs  unsafe_send_sync_impls.rs
11_fully_rust_ciet_isothermal_digital_twin/src/ciet_libraries/component_libraries/: ctah_branch.rs  dhx_branch.rs  heater_branch.rs  mod.rs
11_fully_rust_ciet_isothermal_digital_twin/src/examples/: ciet_server.rs  example1.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  mod.rs
11_fully_rust_ciet_isothermal_digital_twin/src/livedemo/: mod.rs  polling_action_time_test.rs  read_and_write_with_closures.rs
12_maturin_digital_twin_isothermal_CTAH_DRACS_only/: manometer_data.ods  testServer.py
2_temperatureSensor_ServerAndClient/: MyModel.xml
3_pythonServer/: README.md  testServer.py
4_pythonWithRustInServer/: pyproject.toml  testServer.py
5_autoDetectIpaddress/: Cargo.toml  README.md
6_rust_friction_factor_libraries_experimental/: testServer.py
7_rust_ciet_isothermal_digital_twin_expt/: README.md  manometer_data  testScipy.py  testServer.py
9_rust_ciet_isothermal_digital_twin_withDRACS_multithread_python/: .gitignore  Cargo.toml  manometer_data  testServer.py
(+45 files in other folders)
