[package]
name = "opcua_rust_test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
fluid_mechanics_rust = { git = "https://github.com/theodoreOnzGit/fluid_mechanics_rust/", version = "0.0.8" }
local-ip-address = "0.5.1"
opcua = "0.11.0"
